--- a/segmentationApp/src/app/home/home.component.html
+++ b/segmentationApp/src/app/home/home.component.html
@@ -10,7 +10,70 @@
                                 <input type="text" formControlName="seed" class="form-control" placeholder="Seed">
                                 <span class="invalid-feedback">
                                     <span *ngIf="paramsForm.get('seed').errors?.required">
-                                        Por favor ingrese un titulo
+                                        Por favor ingrese el seed
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputName">Memoria lógica</label>
+                                <input type="text" formControlName="asize" class="form-control" placeholder="Memoria lógica">
+                                <span class="invalid-feedback">
+                                    <span *ngIf="paramsForm.get('asize').errors?.required">
+                                        Por favor ingrese el tamaño de direccionamiento lógico
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputName">Memoria física</label>
+                                <input type="text" formControlName="psize" class="form-control" placeholder="Memoria física">
+                                <span class="invalid-feedback">
+                                    <span *ngIf="paramsForm.get('psize').errors?.required">
+                                        Por favor ingrese el tamaño de memoria física
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputName">Cantidad de direcciones virtuales a generar</label>
+                                <input type="text" formControlName="numaddrs" class="form-control" placeholder="Seed">
+                                <span class="invalid-feedback">
+                                    <span *ngIf="paramsForm.get('numaddrs').errors?.required">
+                                        Por favor ingrese una cantidad de direcciones
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputName">Tamaño de dirección virtual</label>
+                                <input type="text" formControlName="len0" class="form-control" placeholder="Seed">
+                                <span class="invalid-feedback">
+                                    <span *ngIf="paramsForm.get('len0').errors?.required">
+                                        Por favor ingrese un tamaño
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputName">Tamaño de la dirección física</label>
+                                <input type="text" formControlName="len1" class="form-control" placeholder="Seed">
+                                <span class="invalid-feedback">
+                                    <span *ngIf="paramsForm.get('len1').errors?.required">
+                                        Por favor ingrese un tamaño
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputName">Registro base de la dirección virtual</label>
+                                <input type="text" formControlName="base0" class="form-control" placeholder="Seed">
+                                <span class="invalid-feedback">
+                                    <span *ngIf="paramsForm.get('base0').errors?.required">
+                                        Por favor ingrese un registro
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="inputName">Registro base de la memoria física</label>
+                                <input type="text" formControlName="base1" class="form-control" placeholder="Seed">
+                                <span class="invalid-feedback">
+                                    <span *ngIf="paramsForm.get('base1').errors?.required">
+                                        Por favor ingrese un registro
                                     </span>
                                 </span>
                             </div>
@@ -23,6 +86,11 @@
                             </button>
                         </div>
                     </form>
+                    <div class="button-center col">
+                        <button class="btn btn-light new" (click)="resetValues()">
+                            Limpiar valores<i class="fas fa-plus-circle fa-1x" style="color: blue"></i>
+                        </button>
+                        </div>
                 </mat-card>
             </div>
             <div class="col-sm">
