--- a/segmentationApp/src/app/home/home.component.html
+++ b/segmentationApp/src/app/home/home.component.html
@@ -1,124 +1,18 @@
-<div class="params-card">
-    <div class="container">
+<div class="col-sm">
+    <mat-card class="mat-card-params">
         <div class="row">
-            <div class="col-sm">
-                <mat-card class="mat-card-params">
-                    <form (ngSubmit)="sendParams()" [formGroup]="paramsForm">
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="inputName">Seed</label>
-                                <input type="text" formControlName="seed" class="form-control" placeholder="Seed">
-                                <span class="invalid-feedback">
-                                    <span *ngIf="paramsForm.get('seed').errors?.required">
-                                        Por favor ingrese el seed
-                                    </span>
-                                </span>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputName">Memoria lógica</label>
-                                <input type="text" formControlName="asize" class="form-control" placeholder="Memoria lógica">
-                                <span class="invalid-feedback">
-                                    <span *ngIf="paramsForm.get('asize').errors?.required">
-                                        Por favor ingrese el tamaño de direccionamiento lógico
-                                    </span>
-                                </span>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputName">Memoria física</label>
-                                <input type="text" formControlName="psize" class="form-control" placeholder="Memoria física">
-                                <span class="invalid-feedback">
-                                    <span *ngIf="paramsForm.get('psize').errors?.required">
-                                        Por favor ingrese el tamaño de memoria física
-                                    </span>
-                                </span>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputName">Cantidad de direcciones virtuales a generar</label>
-                                <input type="text" formControlName="numaddrs" class="form-control" placeholder="Seed">
-                                <span class="invalid-feedback">
-                                    <span *ngIf="paramsForm.get('numaddrs').errors?.required">
-                                        Por favor ingrese una cantidad de direcciones
-                                    </span>
-                                </span>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputName">Tamaño de dirección virtual</label>
-                                <input type="text" formControlName="len0" class="form-control" placeholder="Seed">
-                                <span class="invalid-feedback">
-                                    <span *ngIf="paramsForm.get('len0').errors?.required">
-                                        Por favor ingrese un tamaño
-                                    </span>
-                                </span>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputName">Tamaño de la dirección física</label>
-                                <input type="text" formControlName="len1" class="form-control" placeholder="Seed">
-                                <span class="invalid-feedback">
-                                    <span *ngIf="paramsForm.get('len1').errors?.required">
-                                        Por favor ingrese un tamaño
-                                    </span>
-                                </span>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputName">Registro base de la dirección virtual</label>
-                                <input type="text" formControlName="base0" class="form-control" placeholder="Seed">
-                                <span class="invalid-feedback">
-                                    <span *ngIf="paramsForm.get('base0').errors?.required">
-                                        Por favor ingrese un registro
-                                    </span>
-                                </span>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="inputName">Registro base de la memoria física</label>
-                                <input type="text" formControlName="base1" class="form-control" placeholder="Seed">
-                                <span class="invalid-feedback">
-                                    <span *ngIf="paramsForm.get('base1').errors?.required">
-                                        Por favor ingrese un registro
-                                    </span>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="button-center col">
-                            <button class="btn btn-light new"
-                                [title]="paramsForm.valid ? 'Envia!' : 'Por favor ingresa todos los datos'"
-                                [disabled]="!paramsForm.valid" routerLinkActive="router-link-active">
-                                Enviar parámetros por defecto<i class="fas fa-plus-circle fa-1x" style="color: blue"></i>
-                            </button>
-                        </div>
-                    </form>
-                    <div class="button-center col">
-                        <button class="btn btn-light new" (click)="resetValues()">
-                            Limpiar valores<i class="fas fa-plus-circle fa-1x" style="color: blue"></i>
-                        </button>
-                        </div>
-                </mat-card>
+            <div class="col-md-4">
+                <button class="btn btn-light new" (click)="setDefaultValues()">
+                    Ingresar parámetros por defecto<i class="fas fa-plus-circle fa-1x" style="color: blue"></i>
+                </button>
+                <label class="label-button" title="Genera las direcciones aleatoriamente con un espacio de direccionamiento de 1k y una memoria física de 16k">Information</label>
             </div>
-            <div class="col-sm">
-                <mat-card class="mat-card-params">
-                    <form (ngSubmit)="sendParams()" [formGroup]="paramsForm">
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <label for="inputName">Seed</label>
-                                <input type="text" formControlName="seed" class="form-control" placeholder="Seed">
-                                <span class="invalid-feedback">
-                                    <span *ngIf="paramsForm.get('seed').errors?.required">
-                                        Por favor ingrese un titulo
-                                    </span>
-                                </span>
-                            </div>
-                        </div>
-                        <div class="button-center col">
-                            <button class="btn btn-light new"
-                                [title]="paramsForm.valid ? 'Envia!' : 'Por favor ingresa todos los datos'"
-                                [disabled]="!paramsForm.valid" routerLinkActive="router-link-active">
-                                Crear<i class="fas fa-plus-circle fa-1x" style="color: blue"></i>
-                            </button>
-                        </div>
-                    </form>
-                </mat-card>
+            <div class="col-md-4">
+                <button class="btn btn-light new" (click)="showParamsForm()">
+                    Ingresar parámetros<i class="fas fa-plus-circle fa-1x" style="color: blue"></i>
+                </button>
             </div>
         </div>
-    </div>
-
+    </mat-card>
 </div>
-<hr style="border-top: 1px solid #eee;">
+<app-form *ngIf="isInputParam"></app-form>
