feat: add graphic page and receiving data to show

--- a/segmentationApp/src/app/graphic-results/graphic-results.component.html
+++ b/segmentationApp/src/app/graphic-results/graphic-results.component.html
@@ -1,1 +1,21 @@
-<p>graphic-results works!</p>
+
+ <mat-card class="mat-card" style="width: 2000;">
+     <table>
+    <thead>
+      <tr>
+        <th scope="col">Segment 0</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr >
+        <th scope="row" class="unallocated" height="250">(Unallocated)</th>
+      </tr>
+      <tr>
+        <th scope="row">Segment 1</th>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+      </tr>
+    </tbody>
+  </table>
+</mat-card>
