--- a/segmentationApp/src/app/graphic-results/graphic-results.component.html
+++ b/segmentationApp/src/app/graphic-results/graphic-results.component.html
@@ -1,30 +1,59 @@
+<div class="container">
+  <h4 class="label-select">Tipo de sistema</h4>
+  <mat-form-field appearance="legacy">
+    <mat-label>Decimal</mat-label>
+    <mat-select (selectionChange)="setBase0Variable($event)">
+      <mat-option *ngFor="let state of states" [value]="state.selection">{{state.selection}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
 
- <mat-card class="mat-card" style="width: 2000;">
-     <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Segment</th>
-        <th scope="col">Hexadecimal</th>
-        <th scope="col">Decimal</th>
-        <th scope="col">Sentido</th>
-      </tr>
-    </thead>
-    <tbody >
-      <tr >
-        <th scope="col">Segment 0</th>
-        <th scope="row" > {{base0Object.hexa}}</th>
-        <th scope="row" > {{base0Object.decimal}}</th>
-        <th scope="row" > {{base0Object.isPositive}}</th>
-      </tr>
-      <tr >
-        <th scope="row" class="unallocated" height="250">(Unallocated)</th>
-      </tr>
-      <tr>
-        <th scope="row">Segment 1 (Stack)</th>
-        <th scope="row" > {{base1Object.hexa}}</th>
-        <th scope="row" > {{base1Object.decimal}}</th>
-        <th scope="row" > {{base1Object.isPositive}}</th>
-      </tr>
-    </tbody>
-  </table>
-</mat-card>
+<div class="row">
+  <div class="col">
+    <mat-card class="mat-card-result">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col" class="general-label">Segmento</th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="col" height="150" class="general-label">Base: {{base0Value}}</th>
+            <th class="general-label"> Segmento 0</th>
+          </tr>
+          <strong class="general-label">Límite {{len0Value}}</strong>
+          <tr>
+            <th scope="row" class="unallocated" height="150" class="general-label">(Unallocated)</th>
+            <th scope="row" class="unallocated" height="150" class="general-label"></th>
+          </tr>
+          <tr>
+            <th scope="row" height="150" class="general-label">Límite {{len1Value}}</th>
+            <th scope="row" class="general-label"> Segment 1 (Stack) </th>
+          </tr>
+          <strong class="general-label">Base: {{base1Value}}</strong>
+        </tbody>
+      </table>
+
+    </mat-card>
+  </div>
+  <div class="col">
+    <mat-card class="mat-card-result">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col" class="general-label">Direcciones</th>
+            <th scope="col" class="general-label"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let data of addressesList">
+            <td>{{data.decimal}}</td>
+            <td>{{data.decimalValid}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </mat-card>
+  </div>
+</div>
