--- a/segmentationApp/src/app/form/form.component.html
+++ b/segmentationApp/src/app/form/form.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-sm">
                 <mat-card class="mat-card-params">
-                    <form (ngSubmit)="sendParams()" [formGroup]="paramsForm">
+                    <form (ngSubmit)="callParenGreeet()" [formGroup]="paramsForm">
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputName">Seed</label>
@@ -36,7 +36,7 @@
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputName">Registro base de la memoria física</label>
-                                <input type="text" formControlName="base1" class="form-control" placeholder="Seed">
+                                <input type="text" formControlName="base1" class="form-control" placeholder="">
                                 <span class="invalid-feedback">
                                     <span *ngIf="paramsForm.get('base1').errors?.required">
                                         Por favor ingrese un registro
@@ -45,7 +45,7 @@
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputName">Tamaño de dirección virtual</label>
-                                <input type="text" formControlName="len0" class="form-control" placeholder="Seed">
+                                <input type="text" formControlName="len0" class="form-control" placeholder="">
                                 <span class="invalid-feedback">
                                     <span *ngIf="paramsForm.get('len0').errors?.required">
                                         Por favor ingrese un tamaño
@@ -54,7 +54,7 @@
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputName">Tamaño de la dirección física</label>
-                                <input type="text" formControlName="len1" class="form-control" placeholder="Seed">
+                                <input type="text" formControlName="len1" class="form-control" placeholder="">
                                 <span class="invalid-feedback">
                                     <span *ngIf="paramsForm.get('len1').errors?.required">
                                         Por favor ingrese un tamaño
