--- a/segmentationApp/src/app/home/home.component.html
+++ b/segmentationApp/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+
 <div class="col-sm">
     <mat-card class="mat-card-params">
         <div class="row">
@@ -11,6 +12,9 @@
                 <button class="btn btn-light new" (click)="showParamsForm()">
                     Ingresar parámetros<i class="fas fa-plus-circle fa-1x" style="color: blue"></i>
                 </button>
+            </div>
+            <div>
+                <button type="button" class="btn btn-primary" (click)="showHelpInformation()">Ayuda </button>
             </div>
         </div>
     </mat-card>
