--- a/segmentationApp/src/app/popup/popup.component.html
+++ b/segmentationApp/src/app/popup/popup.component.html
@@ -3,7 +3,7 @@
 <p class="txt-error">{{message}}</p>
 <div class="center-button">
         
-    <button class="btn btn-light new"  (click)="save()" routerLinkActive="router-link-active">
+    <button class="btn btn-primary" (click)="save()" routerLinkActive="router-link-active">
  Ok<i class="fas fa-plus-circle fa-1x" style="color: green"></i>
 </button>
   </div>
