--- a/segmentationApp/src/app/form/form.component.html
+++ b/segmentationApp/src/app/form/form.component.html
@@ -5,7 +5,7 @@
                 <mat-card class="mat-card-params">
                     <form (ngSubmit)="sendData()" [formGroup]="paramsForm">
                         <div class="form-row">
-                            <div class="form-group col-md-6">
+                           <!-- <div class="form-group col-md-6">
                                 <label for="inputName">Seed</label>
                                 <input type="number" formControlName="seed" class="form-control" placeholder="Seed">
                                 <span class="invalid-feedback">
@@ -13,7 +13,7 @@
                                         Por favor ingrese el seed
                                     </span>
                                 </span>
-                            </div>
+                            </div>-->
                             <div class="form-group col-md-6">
                                 <label for="inputName">Tamaño Memoria lógica</label>
                                 <input type="text" formControlName="asize" class="form-control"
