feat: Add column with segment description

--- a/segmentationApp/src/app/graphic-results/graphic-results.component.html
+++ b/segmentationApp/src/app/graphic-results/graphic-results.component.html
@@ -51,6 +51,7 @@
           <tr *ngFor="let data of addressesList">
             <td>{{data.decimal}}</td>
             <td>{{data.decimalValid}}</td>
+            <td>{{data.segment}}</td>
           </tr>
         </tbody>
         <tbody *ngIf="isHexa">
